--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
   "name": "primus852/simple-password",
-  "version": "1.0.1",
+  "version": "1.1.0",
     "description": "Simple Password Generator",
     "type": "package",
     "require": {
-      "php": "^7.0"
+      "php": "^7.0",
+      "ext-ctype": "*"
     },
     "license": "GPL-3.0-or-later",
     "authors": [
